trait-xml/tests/fail/type_tb_inv.rs
trait_xml::trait_xml! {
    <trait>
        <name>Foo</name>
        <bounds>
            <type>
                <name>Bar</name>
                <type-bound>!!!</type-bound>
            </type>
        </bounds>
    </trait>
}

fn main() {}
