trait-xml/tests/fail/type_tb_inv.stderr
error: error parsing type bound: arguments form invalid path. caller: `::trait_xml::trait_xml_parse_type`, args: `!!!`
  --> tests/fail/type_tb_inv.rs:1:1
   |
1  | / trait_xml::trait_xml! {
2  | |     <trait>
3  | |         <name>Foo</name>
4  | |         <bounds>
...  |
10 | |     </trait>
11 | | }
   | |_^
   |
   = note: this error originates in the macro `$crate::trait_xml_parse_type_bound` which comes from the expansion of the macro `trait_xml::trait_xml` (in Nightly builds, run with -Z macro-backtrace for more info)
